Looks like the Hungarian algorithm is working

--- a/model.tex
+++ b/model.tex
@@ -934,9 +934,9 @@ number of components in the mixture $\left| \ts{M}{t}{1}{T}\right| =
 (N!)^T$ is absurdly large.
 
 \newpage
-\parbox{1\textwidth}{\center{Title}\\
-    \resizebox{.95\textwidth}{!}{\includegraphics{ha.png}}\vspace{1cm}\\
-    \resizebox{.95\textwidth}{!}{\includegraphics{ha.png}}
+\parbox{1\textwidth}{\center{Title}\vspace{-10cm}\\
+    \resizebox{.95\textwidth}{!}{\includegraphics{ha.pdf}}\vspace{-10cm}\\
+    \resizebox{.95\textwidth}{!}{\includegraphics{ha.pdf}}
   }
 \vfill \hrule To checkout: \emph{ svn --username you --password yours
   co svn://fraserphysics.com/ps}
